# udemydl

./: .gitignore  CHANGELOG.md  CHANGES.txt  Makefile  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
udemy_dl/: __init__.py  __main__.py  argparser.py  cli.py  course.py  download.py  downloader.py  exceptions.py  session.py  temp.py  udemy.py  udemy_dl.py  udemy_download.py  utils.py
