[bumpversion]
current_version = 0.6.1
commit = True
tag = False

[bumpversion:file:udemy_dl/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:CHANGELOG.md]
search = ?.?.?
replace = ?.?.?
	---
	
	{new_version}

[metadata]
description-file = README.md

[flake8]
ignore = D203
exclude = .git,__pycache__,docs,old,build,dist
max-complexity = 10
max-line-length = 120
